# vector-drift-monitor

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: RUNBOOK.md
docs/maintenance/: bug-triage-playbook.md  editor-standards.md  feature-intake-guide.md  git-attributes-policy.md  pull-request-review-guide.md
docs/operating-model/: architecture-decisions.md  project-scope-baseline.md  roadmap-2026.md
docs/quality/: testing-strategy.md
docs/release/: release-process-checklist.md
src/vector_drift_monitor/: __init__.py  __main__.py  alerts.py  app.py  cli.py  config.py  detector.py  metrics.py  service.py  store.py
tests/: conftest.py  test_app.py  test_cli.py  test_detector.py  test_metrics.py  test_store.py
